--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -128,6 +128,11 @@
                             %br
                           %span.text-warning
                             %small invalid address
+                        - if @bike.registration_address_source.present?
+                          %br
+                          %small
+                            = @bike.registration_address_source.humanize
+
                   - else
                     %tr
                       %td
