--- a/app/views/organized/manages/show.html.haml
+++ b/app/views/organized/manages/show.html.haml
@@ -65,6 +65,8 @@
         %span.file-custom
           %span.file-upload-text= t(".choose_file")
         = f.hidden_field :avatar_cache
+      %span.below-input-help
+        Use a square image for best results
 
   .form-group.row.mt-4
     .form-submit-button
