--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -53,25 +53,28 @@
     "avery_cell" => "Avery Exportable",
   }
   # Most columns are enabled by default, including organization specific registration columns
-  default_columns = %w[created_at_cell
-                       stolen_cell
-                       manufacturer_cell
-                       model_cell
-                       color_cell
-                       owner_email_cell
-                       updated_at_cell
-                       owner_name_cell]
-  default_columns += current_organization.enabled?("bike_stickers") ? ["sticker_cell"] : []
-  default_columns += current_organization.additional_registration_fields.map { |f| "#{f}_cell" }
-  enabled_columns = default_columns
+  initially_checked_columns = %w[created_at_cell
+    stolen_cell
+    manufacturer_cell
+    model_cell
+    color_cell
+    owner_email_cell
+    updated_at_cell
+    owner_name_cell]
+  initially_checked_columns += current_organization.enabled?("bike_stickers") ? ["sticker_cell"] : []
+  initially_checked_columns += current_organization.additional_registration_fields.map { |f| "#{f}_cell" }
+  enabled_columns = initially_checked_columns
   # Some optional columns
   enabled_columns += ["extra_registration_number_cell"] unless enabled_columns.include?("extra_registration_number_cell")
   enabled_columns += ["impounded_cell"] if current_organization.enabled?("impound_bikes")
   enabled_columns += ["avery_cell"] if current_organization.enabled?("avery_export")
   # If the search_stickers param or search_address is set, start with the settings panel open
-  settings_default_open = @search_stickers.present? || @search_address.present?
+  settings_default_open = @search_stickers.present? || @search_address.present? || params[:search_open].present?
+  # NOTE: Checking avery incurs a performance hit - so only render it when the box is checked
+  show_avery_export = current_organization.enabled?("avery_export") && ParamsNormalizer.boolean(params[:avery_export])
+  initially_checked_columns += ["avery_cell"] if show_avery_export
 
-.collapse#organizedSearchSettings.settings-list{ "data-defaultcols" => default_columns.to_json, class: (settings_default_open ? "in" : "") }
+.collapse#organizedSearchSettings.settings-list{ "data-defaultcols" => initially_checked_columns.to_json, class: (settings_default_open ? "in" : "") }
   %h3.header-font-alt
     = t(".visible_columns")
   .row
@@ -156,7 +159,7 @@
             - if @bike_sticker.present?
               %th
                 = t(".link")
-        - if current_organization.enabled?("avery_export")
+        - if show_avery_export
           %th.hiddenColumn.hidden-xs-down.avery_cell=t(".avery")
         - if current_organization.enabled?("impound_bikes")
           %th.hiddenColumn.hidden-xs-down.impounded_cell=t(".impounded")
@@ -208,9 +211,6 @@
                   = bike.organization_affiliation.humanize
                 - else
                   = bike.send(bike_attr)
-            -# - if current_organization.enabled?("avery_export")
-            -#   %td.hiddenColumn{ class: "avery_export" }
-
             -# All organizations can see additional serial#
             %td.hiddenColumn.hidden-xs-down{ class: "extra_registration_number_cell" }
               = bike.extra_registration_number
@@ -229,7 +229,7 @@
                         = bike_sticker.code
                     - if index > 0
                       %br
-          - if current_organization.enabled?("avery_export")
+          - if show_avery_export
             %td.hiddenColumn.hidden-xs-down{ class: "avery_cell" }
               = check_mark if bike.avery_exportable?
           - if current_organization.enabled?("impound_bikes")
@@ -237,6 +237,9 @@
               - if bike.status_impounded? && bike.current_impound_record&.created_at&.present?
                 %small.convertTime
                   = l bike.current_impound_record.created_at, format: :convert_time
-
-.paginate-container.paginate-container-bottom
-  = paginate @bikes
+- if @bikes.total_count > @bikes.count
+  .paginate-container.paginate-container-bottom.row
+    .col-sm-6.mb-2
+      = paginate @bikes
+    .col-sm-6.text-right
+      = select_tag :per_page, options_for_select([10, 25, 50].map { |i| ["#{i} bikes per page", i] }, selected: @per_page), { class: "form-control d-inline-block", style: "width: 15rem; margin-top:15px;" }
