add rad power serials reference

--- a/app/views/info/serials.html.haml
+++ b/app/views/info/serials.html.haml
@@ -25,9 +25,11 @@
     = link_to image_tag('serials/serial_fixie.jpg', alt: t('.another_standard_serial_number')), image_path('serials/serial_fixie.jpg'), class: 'serial-image'
     %p= t(".another_serial_number_beneath_html")
   %li
+    = link_to image_tag('serials/serial_rad_power.jpg', alt: t('.rad_power_serial')), image_path('serials/serial_rad_power.jpg'), class: 'serial-image'
+    %p= t(".rad_power_serials_html")
+  %li
     = link_to image_tag('serials/serial_headtube.jpg', alt: t('.schwinn_serial')), image_path('serials/serial_headtube.jpg'), class: 'serial-image'
-    %p= t(".some_schwinn_bicycles_have_html")
-
+    %p= t(".some_schwinn_bicycles_also_html")
   %li
     = link_to image_tag('serials/serial_pinsch.jpg', alt: t('.doberman_serial')), image_path('serials/serial_pinsch.jpg'), class: 'serial-image'
     %p= t(".a_serial_number_located_on_a_html")
