--- a/app/views/admin/bulk_imports/show.html.haml
+++ b/app/views/admin/bulk_imports/show.html.haml
@@ -29,8 +29,11 @@
         %td
           File
         %td
-          %small
-            = link_to @bulk_import.file_url, @bulk_import.file_url
+          - if @bulk_import.file_cleaned?
+            %span.text-warning file removed
+          - else
+            %small
+              = link_to @bulk_import.file_url, @bulk_import.file_url
       %tr
         %td
           Errors
