--- a/app/views/organized/impound_records/show.html.haml
+++ b/app/views/organized/impound_records/show.html.haml
@@ -118,7 +118,7 @@
 
 - if impound_record_updates.any?
   .mt-4
-    %table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable
+    %table.table.table-striped.table-bordered.table-sm.without-exterior-border#recordsTable
       %thead.small-header.hidden-md-down
         %th
           Updated
