Explanation of bulk import removal and parking notification display improvements (#1760)

--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -6,12 +6,13 @@
 - hide_status ||= false
 - skip_resolved ||= false
 - render_sortable ||= false
+- render_internal_notes ||= false
 
 - # TODO: add translations
 :css
   #recordsTable.hide-status .status-cell { display: none; }
 
-%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable{ class: hide_status ? "hide-status" : "" }
+%table.table.table-striped.table-bordered.table-sm.without-exterior-border.parking-notifications-table#recordsTable{ class: hide_status ? "hide-status" : "" }
   %thead.small-header.hidden-md-down
     - unless skip_map_cell
       %th.map-cell
@@ -36,6 +37,8 @@
       %th
         %small=t(".notification_number")
     %th.status-cell Status
+    - if render_internal_notes # NOTE: JS never renders with this, so it isn't included in the JS template
+      %th.small Notes
     - unless skip_resolved
       %th.status-cell
         %small=t(".resolved")
@@ -72,6 +75,12 @@
                 Resolved:
               %small.convertTime
                 = l(parking_notification.resolved_at, format: :convert_time)
+          - if render_internal_notes
+            - if parking_notification.internal_notes.present?
+              %small.extended-col-info.d-block
+                %strong
+                  Notes:
+                = parking_notification.internal_notes
 
         - if render_address
           %td.hidden-sm-cells
@@ -95,6 +104,10 @@
               = parking_notification.notification_number
         %td.hidden-sm-cells.status-cell
           = status_display(parking_notification.status)
+        - if render_internal_notes
+          %td.hidden-sm-cells
+            %small
+              = parking_notification.internal_notes
         - unless skip_resolved
           %td.hidden-sm-cells.status-cell
             - if parking_notification.impound_record_id.present?
