--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -33,6 +33,10 @@
           Short Name
         %td
           = @organization.short_name
+          - if CredibilityScorer.organization_trusted?(@organization)
+            %span.badge.badge-success.ml-2 Trusted credibility
+          - elsif CredibilityScorer.organization_suspicious?(@organization)
+            %span.badge.badge-warning.ml-2 Suspicious credibility
       %tr
         %td
           Map
@@ -55,12 +59,6 @@
           Kind
         %td
           = @organization.kind.humanize
-          - if CredibilityScorer.organization_trusted?(@organization)
-            %span.badge.badge-success Trusted
-            %small.less-strong credibility
-          - elsif CredibilityScorer.organization_suspicious?(@organization)
-            %span.badge.badge-warning Suspicious
-            %small.less-strong credibility
       %tr
         %td
           Slug
