Additional organization_trusted credibility logic (#1764)

--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -33,6 +33,10 @@
           Short Name
         %td
           = @organization.short_name
+          - if CredibilityScorer.organization_trusted?(@organization)
+            %span.badge.badge-success.ml-2 Trusted credibility
+          - elsif CredibilityScorer.organization_suspicious?(@organization)
+            %span.badge.badge-warning.ml-2 Suspicious credibility
       %tr
         %td
           Map
